fix(Button): fix vertical-align of large content

--- a/packages/retail-ui/components/Button/Button.common.less
+++ b/packages/retail-ui/components/Button/Button.common.less
@@ -66,6 +66,7 @@
     white-space: nowrap;
     display: inline-block;
     width: 100%;
+    vertical-align: top;
   }
 
   .icon {
@@ -81,7 +82,6 @@
       line-height: @control-line-height-small;
 
       :global(.rt-ie-any) & {
-        line-height: normal;
         padding-top: @control-padding-y-small - 1;
         padding-bottom: @control-padding-y-small + 1;
       }
@@ -96,7 +96,6 @@
       line-height: @control-line-height-medium;
 
       :global(.rt-ie-any) & {
-        line-height: normal;
         padding-top: @control-padding-y-medium - 2;
         padding-bottom: @control-padding-y-medium + 2;
       }
@@ -109,7 +108,6 @@
       line-height: @control-line-height-small;
 
       :global(.rt-ie-any) & {
-        line-height: normal;
         padding-top: @control-padding-y-medium - 1;
         padding-bottom: @control-padding-y-medium + 1;
       }
@@ -124,7 +122,6 @@
       line-height: @control-line-height-large;
 
       :global(.rt-ie-any) & {
-        line-height: normal;
         padding-top: @control-padding-y-large - 2;
         padding-bottom: @control-padding-y-large + 2;
       }
