--- a/packages/retail-ui/components/variables.less
+++ b/packages/retail-ui/components/variables.less
@@ -56,12 +56,12 @@
 @blink-color: #cde4f8;
 
 @control-border-width: 1px;
-@control-line-height-small: 20px;
-@control-line-height-medium: 20px;
-@control-line-height-large: 22px;
-@control-padding-y-small: 6px;
-@control-padding-y-medium: 9px;
-@control-padding-y-large: 10px;
+@control-line-height-small: 24px;
+@control-line-height-medium: 24px;
+@control-line-height-large: 24px;
+@control-padding-y-small: 4px;
+@control-padding-y-medium: 7px;
+@control-padding-y-large: 9px;
 
 @control-height-small: 2 * @control-border-width + 2 * @control-padding-y-small + @control-line-height-small;
 @control-height-medium: 2 * @control-border-width + 2 * @control-padding-y-medium + @control-line-height-medium;
